--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "axios": "^1.3.3",
     "element-ui": "^2.15.13",
+    "jwchat": "^1.0.12",
+    "lemon-imui": "^1.7.6",
+    "moment": "^2.29.4",
     "vue": "^2.5.2",
     "vue-axios": "^3.5.2",
+    "vue-beautiful-chat": "^2.5.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -28,7 +32,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -43,10 +47,12 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.8.5",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^1.3.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
-    "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
+    "vue-loader": "^13.7.3",
+    "vue-style-loader": "^3.1.2",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
