--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "ant-design-vue": "1.5.4",
     "axios": "^1.3.3",
     "element-ui": "^2.15.13",
+    "image-conversion": "^2.1.1",
+    "js-export-excel": "^1.1.4",
+    "js-md5": "^0.7.3",
     "jwchat": "^1.0.12",
     "lemon-imui": "^1.7.6",
     "moment": "^2.29.4",
     "vue": "^2.5.2",
     "vue-axios": "^3.5.2",
     "vue-beautiful-chat": "^2.5.0",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -39,6 +43,8 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "less": "^3.13.1",
+    "less-loader": "^5.0.0",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
@@ -47,10 +53,13 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.2.2",
     "semver": "^5.3.0",
     "shelljs": "^0.8.5",
+    "style-loader": "^3.3.2",
     "stylus": "^0.54.5",
-    "stylus-loader": "^1.3.0",
+    "stylus-loader": "^1.6.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.7.3",
